--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "3.2",
+        "filament/notifications": "3.2",
         "filament/spatie-laravel-tags-plugin": "3.2",
+        "flowframe/laravel-trend": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
@@ -44,7 +46,8 @@
             "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan filament:upgrade"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
