--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "twilio/sdk": "^8.0"
+        "laravel/tinker": "^2.8",
+        "twilio/sdk": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
