--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "filament/spatie-laravel-tags-plugin": "3.2",
         "flowframe/laravel-trend": "*",
         "guzzlehttp/guzzle": "^7.2",
+        "illuminate/pagination": "*",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8"
