--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "3.2",
-        "filament/notifications": "3.2",
         "filament/spatie-laravel-tags-plugin": "3.2",
-        "flowframe/laravel-trend": "*",
         "guzzlehttp/guzzle": "^7.2",
-        "illuminate/pagination": "*",
+        "laravel/fortify": "*",
         "laravel/framework": "^10.10",
+        "laravel/jetstream": "^4.3",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "twilio/sdk": "^8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -47,8 +47,7 @@
             "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
-            "@php artisan filament:upgrade"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
