--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "bezhansalleh/filament-shield": "^3.2",
+        "blade-ui-kit/blade-heroicons": "^2.3",
         "filament/filament": "3.2",
         "filament/spatie-laravel-tags-plugin": "3.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/fortify": "*",
         "laravel/framework": "^10.10",
-        "laravel/jetstream": "^4.3",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8",
-        "twilio/sdk": "^8.0"
+        "laravel/jetstream": "^4.3",
         "laravel/tinker": "^2.8",
         "twilio/sdk": "*"
     },
@@ -49,7 +49,8 @@
             "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
-            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force",
+            "@php artisan filament:upgrade"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
