--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,21 @@
         "bezhansalleh/filament-shield": "^3.2",
         "blade-ui-kit/blade-heroicons": "^2.3",
         "filament/filament": "3.2",
+        "filament/notifications": "3.2",
         "filament/spatie-laravel-tags-plugin": "3.2",
+        "flowframe/laravel-trend": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/fortify": "*",
+        "illuminate/pagination": "*",
         "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
         "laravel/jetstream": "^4.3",
+        "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "twilio/sdk": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
@@ -61,7 +65,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/dusk"
+            ]
         }
     },
     "config": {
